<resources>
    <string name="app_name">EasyScan</string>

    <!-- Login -->
    <string name="action_login">Authenticate</string>
    <string name="action_save_credentials">Save credentials</string>

    <string name="error_credentials_empty_username">Your username is empty</string>
    <string name="error_credentials_empty_password">Your password is empty</string>
    <string name="error_credentials_mismatch">Invalid username and/or password</string>

    <string name="hint_username">Your username</string>
    <string name="hint_password">Your password</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_copyright">Copyright © 2020\nAndroid Training Program, Portugal</string>
    <string name="about_website">Website</string>
    <string name="about_youtube">YouTube Channel</string>
    <string name="about_email">E-mail</string>

    <string name="about_share">Share</string>
    <string name="about_twitter">Twitter</string>

    <string name="about_authors">Authors</string>
    <string name="about_almo">\@davilagrau</string>
    <string name="about_cafonsomota">\@cafonsomota</string>
    <string name="about_tallnato">\@tallnato</string>

    <string name="about_libraries">Libraries</string>
    <string name="about_android">Android</string>
    <string name="about_retrofit"><a href="https://github.com/square/retrofit">Retrofit</a></string>
    <string name="about_glide"><a href="https://github.com/bumptech/glide">glide</a></string>
    <string name="about_icons8">icons8</string>

    <!-- Buttons -->
    <string name="open_camera">Open camera</string>
    <string name="open_details">Open details</string>
    <string name="show_dialog">Show dialog</string>
    <string name="show_snackbar">Show snackbar</string>
    <string name="start_timer">Start</string>

    <!-- Dialog -->
    <string name="dialog_title">Bobi</string>
    <string name="dialog_message">What a beautiful dog!</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_ok_selected">You selected OK!</string>
    <string name="dialog_action_cancel">Cancel</string>

    <!-- Snackbar -->
    <string name="snackbar_message">What a beautiful dog!</string>
    <string name="snackbar_action_thanks">Thank you</string>
    <string name="snackbar_action_thanks_selected">You selected Thank you!</string>

    <string name="time_remaining">Remaining %d seconds</string>
    <string name="time_done">Finished!</string>

    <!-- Content Description -->
    <string name="description_logo">Application logo</string>
    <string name="description_image">Image of a dog</string>

    <!-- Main -->
    <string name="main_menu_home">Home</string>
    <string name="main_menu_breeds">Breeds</string>
    <string name="main_menu_favourites">Favourites</string>
    <string name="main_menu_chat">Chat</string>
    <string name="main_menu_about">Histórico</string>
    <string name="uploadButton">Upload</string>
    <string name="messages_input_hint">teste</string>
    <string name="floatingButtonCamera">Take a photo</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="edit_text">Edit text</string>
    <string name="content_description_details_photo">Image</string>
    <string name="delete_dialog_title">Delete document</string>
    <string name="delete_dialog_message">Do you want to delete this document?</string>
    <string name="delete_dialog_action_ok">Delete</string>
    <string name="delete_dialog_action_cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="sort_items">Sort items</string>
    <string name="delete_item">Delete item</string>


</resources>